docs/envoy/v1.35.3/_sources/intro/arch_overview/security/external_dep_build.rst.txt
External dependencies: ``build``
================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Apple Rules for Bazel <https://github.com/bazelbuild/rules_apple>`__, `3.20.1 <https://github.com/bazelbuild/rules_apple/releases/tag/3.20.1>`__, 2025-03-14, , `Apache-2.0 <https://github.com/bazelbuild/rules_apple/blob/3.20.1/LICENSE>`__
  `Aspect Bazel helpers <https://github.com/aspect-build/bazel-lib>`__, `2.16.0 <https://github.com/aspect-build/bazel-lib/releases/tag/v2.16.0>`__, 2025-05-06, , `Apache-2.0 <https://github.com/aspect-build/bazel-lib/blob/v2.16.0/LICENSE>`__
  `Bazel features <https://github.com/bazel-contrib/bazel_features>`__, `1.32.0 <https://github.com/bazel-contrib/bazel_features/releases/tag/v1.32.0>`__, 2025-06-17, , `Apache-2.0 <https://github.com/bazel-contrib/bazel_features/blob/v1.32.0/LICENSE>`__
  `bazel-compilation-database <https://github.com/grailbio/bazel-compilation-database>`__, `4086479 <https://github.com/grailbio/bazel-compilation-database/tree/40864791135333e1446a04553b63cbe744d358d0>`__, 2022-09-06, , `Apache-2.0 <https://github.com/grailbio/bazel-compilation-database/blob/40864791135333e1446a04553b63cbe744d358d0/LICENSE>`__
  `bazel-toolchains <https://github.com/bazelbuild/bazel-toolchains>`__, `5.1.2 <https://github.com/bazelbuild/bazel-toolchains/releases/tag/v5.1.2>`__, 2022-08-09, , `Apache-2.0 <https://github.com/bazelbuild/bazel-toolchains/blob/v5.1.2/LICENSE>`__
  `C++ rules for Bazel <https://github.com/bazelbuild/rules_cc>`__, `0.1.1 <https://github.com/bazelbuild/rules_cc/releases/tag/0.1.1>`__, 2025-02-07, , `Apache-2.0 <https://github.com/bazelbuild/rules_cc/blob/0.1.1/LICENSE>`__
  `CMake (Linux aarch64) <https://cmake.org/>`__, `3.22.1 <https://github.com/Kitware/CMake/releases/tag/v3.22.1>`__, 2021-12-07, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v3.22.1/Copyright.txt>`__
  `CMake (Linux x86_64) <https://cmake.org/>`__, `3.22.1 <https://github.com/Kitware/CMake/releases/tag/v3.22.1>`__, 2021-12-07, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v3.22.1/Copyright.txt>`__
  `envoy_toolshed <https://github.com/envoyproxy/toolshed>`__, `0.3.3 <https://github.com/envoyproxy/toolshed/releases/tag/bazel-v0.3.3>`__, 2025-06-02, , `Apache-2.0 <https://github.com/envoyproxy/toolshed/blob/bazel-v0.3.3/LICENSE>`__
  `Gazelle <https://github.com/bazelbuild/bazel-gazelle>`__, `0.44.0 <https://github.com/bazelbuild/bazel-gazelle/releases/tag/v0.44.0>`__, 2025-06-13, , `Apache-2.0 <https://github.com/bazelbuild/bazel-gazelle/blob/v0.44.0/LICENSE>`__
  `Go (Linux amd64) <https://golang.org/>`__, `1.24.2 <https://dl.google.com/go/go1.24.2.linux-amd64.tar.gz>`__, 2024-12-03, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `Go (Linux arm64) <https://golang.org/>`__, `1.24.2 <https://dl.google.com/go/go1.24.2.linux-arm64.tar.gz>`__, 2024-12-03, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.53.0 <https://github.com/bazelbuild/rules_go/releases/tag/v0.53.0>`__, 2025-02-11, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.53.0/LICENSE.txt>`__
  `Java rules for Bazel <https://github.com/bazelbuild/rules_java/>`__, `7.12.5 <https://github.com/bazelbuild/rules_java/releases/tag/7.12.5>`__, 2025-03-25, , `Apache-2.0 <https://github.com/bazelbuild/rules_java/blob/7.12.5/LICENSE>`__
  `Java Rules for Bazel <https://github.com/bazelbuild/rules_jvm_external>`__, `6.7 <https://github.com/bazelbuild/rules_jvm_external/releases/tag/6.7>`__, 2025-02-11, , `Apache-2.0 <https://github.com/bazelbuild/rules_jvm_external/blob/6.7/LICENSE>`__
  `Ninja <https://ninja-build.org/>`__, `1.10.2 <https://github.com/ninja-build/ninja/releases/tag/v1.10.2>`__, 2020-11-28, `cpe:2.3:a:ninja-build:ninja:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aninja-build%3Aninja%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/ninja-build/ninja/blob/v1.10.2/COPYING>`__
  `Packaging rules for Bazel <https://github.com/bazelbuild/rules_pkg>`__, `1.1.0 <https://github.com/bazelbuild/rules_pkg/releases/tag/1.1.0>`__, 2025-03-12, , `Apache-2.0 <https://github.com/bazelbuild/rules_pkg/blob/1.1.0/LICENSE>`__
  `protoc-gen-jsonschema <https://github.com/norbjd/protoc-gen-jsonschema>`__, `7680e49 <https://github.com/norbjd/protoc-gen-jsonschema/tree/7680e4998426e62b6896995ff73d4d91cc5fb13c>`__, 2023-05-30, , `Apache-2.0 <https://github.com/norbjd/protoc-gen-jsonschema/blob/7680e4998426e62b6896995ff73d4d91cc5fb13c/LICENSE>`__
  `Python rules for Bazel <https://github.com/bazelbuild/rules_python>`__, `1.4.1 <https://github.com/bazelbuild/rules_python/releases/tag/1.4.1>`__, 2025-05-08, , `Apache-2.0 <https://github.com/bazelbuild/rules_python/blob/1.4.1/LICENSE>`__
  `Ruby rules for Bazel <https://github.com/protocolbuffers/rules_ruby>`__, `37cf590 <https://github.com/protocolbuffers/rules_ruby/tree/37cf5900d0b0e44fa379c0ea3f5fcee0035d77ca>`__, 2023-01-12, , `Apache-2.0 <https://github.com/protocolbuffers/rules_ruby/blob/37cf5900d0b0e44fa379c0ea3f5fcee0035d77ca/LICENSE>`__
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.14.0 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.14.0>`__, 2025-02-11, , `Apache-2.0 <https://github.com/bazelbuild/rules_foreign_cc/blob/0.14.0/LICENSE>`__
  `rules_license <https://github.com/bazelbuild/rules_license>`__, `1.0.0 <https://github.com/bazelbuild/rules_license/releases/tag/1.0.0>`__, 2024-09-05, , `Apache-2.0 <https://github.com/bazelbuild/rules_license/blob/1.0.0/LICENSE>`__
  `Shell script rules for Bazel <https://github.com/bazelbuild/rules_shell>`__, `0.5.0 <https://github.com/bazelbuild/rules_shell/releases/tag/v0.5.0>`__, 2025-06-12, , `Apache-2.0 <https://github.com/protocolbuffers/rules_shell/blob/0.5.0/LICENSE>`__
  `Shellcheck rules for bazel <https://github.com/aignas/rules_shellcheck>`__, `0.3.3 <https://github.com/aignas/rules_shellcheck/releases/tag/0.3.3>`__, 2024-02-15, , `MIT <https://github.com/aignas/rules_shellcheck/blob/0.3.3/LICENSE>`__

