docs/envoy/v1.38.0/_sources/intro/arch_overview/security/external_dep_build.rst.txt
External dependencies: ``build``
================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Apple Rules for Bazel <https://github.com/bazelbuild/rules_apple>`__, `3.20.1 <https://github.com/bazelbuild/rules_apple/releases/tag/3.20.1>`__, 2025-03-14, , `Apache-2.0 <https://github.com/bazelbuild/rules_apple/blob/3.20.1/LICENSE>`__
  `Aspect Bazel helpers <https://github.com/aspect-build/bazel-lib>`__, `2.21.2 <https://github.com/aspect-build/bazel-lib/releases/tag/v2.21.2>`__, 2025-09-17, , `Apache-2.0 <https://github.com/aspect-build/bazel-lib/blob/v2.21.2/LICENSE>`__
  `Bazel features <https://github.com/bazel-contrib/bazel_features>`__, `1.45.0 <https://github.com/bazel-contrib/bazel_features/releases/tag/v1.45.0>`__, 2026-04-02, , `Apache-2.0 <https://github.com/bazel-contrib/bazel_features/blob/v1.45.0/LICENSE>`__
  `bazel-compilation-database <https://github.com/grailbio/bazel-compilation-database>`__, `4086479 <https://github.com/grailbio/bazel-compilation-database/tree/40864791135333e1446a04553b63cbe744d358d0>`__, 2022-09-06, , `Apache-2.0 <https://github.com/grailbio/bazel-compilation-database/blob/40864791135333e1446a04553b63cbe744d358d0/LICENSE>`__
  `C++ rules for Bazel <https://github.com/bazelbuild/rules_cc>`__, `0.2.17 <https://github.com/bazelbuild/rules_cc/releases/tag/0.2.17>`__, 2026-02-18, , `Apache-2.0 <https://github.com/bazelbuild/rules_cc/blob/0.2.17/LICENSE>`__
  `Clang (Linux ppc64le) <https://llvm.org/>`__, `14.0.0 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-14.0.0>`__, 2022-03-23, `cpe:2.3:a:llvm:clang:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3Aclang%3A%2A&search_type=all>`__, `Apache-2.0 WITH LLVM-exception <https://github.com/llvm/llvm-project/blob/llvmorg-14.0.0/LICENSE.TXT>`__
  `CMake (Linux aarch64) <https://cmake.org/>`__, `4.3.2 <https://github.com/Kitware/CMake/releases/tag/v4.3.2>`__, 2026-04-21, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.3.2/Copyright.txt>`__
  `CMake (Linux x86_64) <https://cmake.org/>`__, `4.3.2 <https://github.com/Kitware/CMake/releases/tag/v4.3.2>`__, 2026-04-21, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.3.2/Copyright.txt>`__
  `CMake (source) <https://cmake.org/>`__, `4.3.2 <https://github.com/Kitware/CMake/releases/tag/v4.3.2>`__, 2026-04-21, `cpe:2.3:a:kitware:cmake:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Akitware%3Acmake%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/Kitware/CMake/blob/v4.3.2/Copyright.txt>`__
  `envoy_toolshed <https://github.com/envoyproxy/toolshed>`__, `0.3.33 <https://github.com/envoyproxy/toolshed/releases/tag/bazel-v0.3.33>`__, 2026-04-20, , `Apache-2.0 <https://github.com/envoyproxy/toolshed/blob/bazel-v0.3.33/LICENSE>`__
  `Gazelle <https://github.com/bazelbuild/bazel-gazelle>`__, `0.47.0 <https://github.com/bazelbuild/bazel-gazelle/releases/tag/v0.47.0>`__, 2025-11-07, , `Apache-2.0 <https://github.com/bazelbuild/bazel-gazelle/blob/v0.47.0/LICENSE>`__
  `Go (Linux amd64) <https://golang.org/>`__, `1.26.2 <https://dl.google.com/go/go1.26.2.linux-amd64.tar.gz>`__, 2025-06-05, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `Go (Linux arm64) <https://golang.org/>`__, `1.26.2 <https://dl.google.com/go/go1.26.2.linux-arm64.tar.gz>`__, 2025-06-05, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://golang.org/LICENSE>`__
  `Go (Linux ppc64le) <https://golang.org/>`__, `1.26.2 <https://dl.google.com/go/go1.26.2.linux-ppc64le.tar.gz>`__, 2026-04-07, `cpe:2.3:a:golang:go:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agolang%3Ago%3A%2A&search_type=all>`__, `BSD-3-Clause <https://go.dev/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.60.0 <https://github.com/bazelbuild/rules_go/releases/tag/v0.60.0>`__, 2026-02-09, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.60.0/LICENSE.txt>`__
  `Java rules for Bazel <https://github.com/bazelbuild/rules_java/>`__, `7.12.5 <https://github.com/bazelbuild/rules_java/releases/tag/7.12.5>`__, 2025-03-25, , `Apache-2.0 <https://github.com/bazelbuild/rules_java/blob/7.12.5/LICENSE>`__
  `Java Rules for Bazel <https://github.com/bazelbuild/rules_jvm_external>`__, `6.10 <https://github.com/bazelbuild/rules_jvm_external/releases/tag/6.10>`__, 2026-02-04, , `Apache-2.0 <https://github.com/bazelbuild/rules_jvm_external/blob/6.10/LICENSE>`__
  `LLVM toolchain for Bazel <https://github.com/bazel-contrib/toolchains_llvm>`__, `1.7.0 <https://github.com/bazel-contrib/toolchains_llvm/releases/tag/v1.7.0>`__, 2026-03-13, , `Apache-2.0 <https://github.com/bazel-contrib/toolchains_llvm/blob/v1.7.0/LICENSE>`__
  `Ninja <https://ninja-build.org/>`__, `1.13.2 <https://github.com/ninja-build/ninja/releases/tag/v1.13.2>`__, 2025-11-20, `cpe:2.3:a:ninja-build:ninja:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Aninja-build%3Aninja%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/ninja-build/ninja/blob/v1.13.2/COPYING>`__
  `Packaging rules for Bazel <https://github.com/bazelbuild/rules_pkg>`__, `1.2.0 <https://github.com/bazelbuild/rules_pkg/releases/tag/1.2.0>`__, 2025-12-03, , `Apache-2.0 <https://github.com/bazelbuild/rules_pkg/blob/1.2.0/LICENSE>`__
  `platforms <https://github.com/bazelbuild/platforms>`__, `1.0.0 <https://github.com/bazelbuild/platforms/releases/tag/1.0.0>`__, 2025-05-27, , `Apache-2.0 <https://github.com/bazelbuild/platforms/blob/1.0.0/LICENSE>`__
  `protoc-gen-jsonschema <https://github.com/norbjd/protoc-gen-jsonschema>`__, `7680e49 <https://github.com/norbjd/protoc-gen-jsonschema/tree/7680e4998426e62b6896995ff73d4d91cc5fb13c>`__, 2023-05-30, , `Apache-2.0 <https://github.com/norbjd/protoc-gen-jsonschema/blob/7680e4998426e62b6896995ff73d4d91cc5fb13c/LICENSE>`__
  `Protocol Buffers (protoc) linux_aarch_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , 
  `Protocol Buffers (protoc) linux_ppcle_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , 
  `Protocol Buffers (protoc) linux_x86_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , 
  `Protocol Buffers (protoc) osx_aarch_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , 
  `Protocol Buffers (protoc) osx_x86_64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , 
  `Protocol Buffers (protoc) win64 <https://developers.google.com/protocol-buffers>`__, `33.2 <https://github.com/protocolbuffers/protobuf/releases/tag/v33.2>`__, 2025-12-05, , 
  `Python rules for Bazel <https://github.com/bazelbuild/rules_python>`__, `1.9.0 <https://github.com/bazelbuild/rules_python/releases/tag/1.9.0>`__, 2026-03-04, , `Apache-2.0 <https://github.com/bazelbuild/rules_python/blob/1.9.0/LICENSE>`__
  `Ruby rules for Bazel <https://github.com/protocolbuffers/rules_ruby>`__, `37cf590 <https://github.com/protocolbuffers/rules_ruby/tree/37cf5900d0b0e44fa379c0ea3f5fcee0035d77ca>`__, 2023-01-12, , `Apache-2.0 <https://github.com/protocolbuffers/rules_ruby/blob/37cf5900d0b0e44fa379c0ea3f5fcee0035d77ca/LICENSE>`__
  `Rules for using foreign build systems in Bazel <https://github.com/bazelbuild/rules_foreign_cc>`__, `0.15.1 <https://github.com/bazelbuild/rules_foreign_cc/releases/tag/0.15.1>`__, 2025-06-24, , `Apache-2.0 <https://github.com/bazelbuild/rules_foreign_cc/blob/0.15.1/LICENSE>`__
  `rules_license <https://github.com/bazelbuild/rules_license>`__, `1.0.0 <https://github.com/bazelbuild/rules_license/releases/tag/1.0.0>`__, 2024-09-05, , `Apache-2.0 <https://github.com/bazelbuild/rules_license/blob/1.0.0/LICENSE>`__
  `Shell script rules for Bazel <https://github.com/bazelbuild/rules_shell>`__, `0.7.1 <https://github.com/bazelbuild/rules_shell/releases/tag/v0.7.1>`__, 2026-03-23, , `Apache-2.0 <https://github.com/protocolbuffers/rules_shell/blob/0.7.1/LICENSE>`__
  `Shellcheck rules for bazel <https://github.com/aignas/rules_shellcheck>`__, `0.4.0 <https://github.com/aignas/rules_shellcheck/releases/tag/0.4.0>`__, 2025-08-13, , `MIT <https://github.com/aignas/rules_shellcheck/blob/0.4.0/LICENSE>`__
  `yq.bzl <https://github.com/bazel-contrib/yq.bzl>`__, `0.1.1 <https://github.com/bazel-contrib/yq.bzl/releases/tag/v0.1.1>`__, 2025-05-26, , `Apache-2.0 <https://github.com/bazel-contrib/yq.bzl/blob/v0.1.1/LICENSE>`__

